added logic to check winner and end game

--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
   </head>
 
   <body>
+    <h3><span id="playerOne"></span></span></h3>
     <table>
       <tr>
         <td class="cell" id="0"></td>
